Edited wiki page through web user interface.

--- a/wiki/InstallationGuide.wiki
+++ b/wiki/InstallationGuide.wiki
@@ -47,7 +47,7 @@ make
 make install
 }}}
 
-Restart Pidgin, activate Pidgin Video under the "Plugins" menu and have fun! ;)
+Restart Pidgin, activate Pidgin Embedded Video under the "Plugins" menu and have fun! ;)
 
 As a side note, you can uninstall the plugin with...
 {{{
