--- a/wiki/InstallationGuide.wiki
+++ b/wiki/InstallationGuide.wiki
@@ -3,7 +3,7 @@
 
 We have tried to keep it as simple as possible. So here it is!
 
-First of all, be sure that you have downloaded and installed [http://pidgin.im Pidgin] and [http://get.adobe.com/flashplayer/ Adobe Flash Player].
+First of all, be sure that you have downloaded and installed [http://pidgin.im Pidgin (2.6.x)] and [http://get.adobe.com/flashplayer/ Adobe Flash Player].
 
 == Installation from source code ==
 
@@ -18,7 +18,12 @@ You will need these packages to be installed before compiling the plugin on your
 
 If you don't find the right version in the repository for the libwebkit-dev package, you may take a look on [https://launchpad.net/~webkit-team/+archive/ppa this]. They will tell you how to install it on your Ubuntu machine in just a few steps:
 
-  * Open _System > Administration > Software Sources_. 
+  * Write in a terminal...
+{{{
+sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 2D9A3C5B
+sudo apt-get update
+}}}
+  * Open _System > Administration > Software Sources_.
   * Click on the _Third-Party Software_ tab.
 https://launchpad.net/+help/soyuz/images/software-sources-3rdparty-tab.png
   * Click on the _Add_ button.
@@ -26,12 +31,7 @@ https://launchpad.net/+help/soyuz/images/software-sources-3rdparty-tab.png
 {{{
 deb http://ppa.launchpad.net/webkit-team/ppa/ubuntu YOUR_UBUNTU_VERSION main
 }}}
-where {{{ YOUR_UBUNTU_VERSION }}} is {{{ karmic }}} for Karmic (9.10), {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10), {{{ hardy }}} for Hardy (8.04).
-  * Write in a terminal...
-{{{
-sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 2D9A3C5B
-sudo apt-get update
-}}}
+where {{{ YOUR_UBUNTU_VERSION }}} is {{{ karmic }}} for Karmic (9.10), {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10), {{{ hardy }}} for Hardy (8.04). Then click _Close_ and _Reload_.
   * Open _System > Administration > Synaptic Package Manager_, press the _Reload_ button and install the latest version of the libwebkit-dev package.
 
 === Compilation ===
