--- a/wiki/InstallationGuide.wiki
+++ b/wiki/InstallationGuide.wiki
@@ -3,7 +3,7 @@
 
 We have tried to keep it as simple as possible. So here it is!
 
-First of all, be sure that you have downloaded and installed [http://pidgin.im Pidgin (2.6.x)] and [http://get.adobe.com/flashplayer/ Adobe Flash Player].
+First of all, be sure that you have downloaded and installed [http://pidgin.im Pidgin] and [http://get.adobe.com/flashplayer/ Adobe Flash Player].
 
 == Installation from source code ==
 
@@ -31,7 +31,7 @@ https://launchpad.net/+help/soyuz/images/software-sources-3rdparty-tab.png
 {{{
 deb http://ppa.launchpad.net/webkit-team/ppa/ubuntu YOUR_UBUNTU_VERSION main
 }}}
-where {{{ YOUR_UBUNTU_VERSION }}} is {{{ karmic }}} for Karmic (9.10), {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10), {{{ hardy }}} for Hardy (8.04). Then click _Close_ and _Reload_.
+where {{{ YOUR_UBUNTU_VERSION }}} is {{{ karmic }}} for Karmic (9.10), {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10), {{{ hardy }}} for Hardy (8.04). Then click _Close_.
   * Open _System > Administration > Synaptic Package Manager_, press the _Reload_ button and install the latest version of the libwebkit-dev package.
 
 === Compilation ===
