Edited wiki page through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -9,6 +9,10 @@
 
 [http://pidgin-embeddedvideo.googlecode.com/svn/wiki/screenshots/youtube.png]
 
+== Trilulilu ==
+
+[http://pidgin-embeddedvideo.googlecode.com/svn/wiki/screenshots/trilulilu.png]
+
 == Configuration ==
 
 [http://pidgin-embeddedvideo.googlecode.com/svn/wiki/screenshots/configuration.png]
