--- a/wiki/InstallationGuide.wiki
+++ b/wiki/InstallationGuide.wiki
@@ -13,10 +13,10 @@ You will need these packages to be installed before compiling the plugin on your
 
   * pidgin-dev
   * libglib2.0-dev
-  * libxml2-dev
+  * libcurl3-dev
   * libwebkit-dev >= 1.1.12
 
-If you don't find the right version in the repository for the libwebkit-dev package, you may take a look on [https://launchpad.net/~webkit-team/+archive/ppa this]. They will tell you how to install it on your Ubuntu machine in just a few steps:
+Whether your Ubuntu version is at most 9.04 or you don't have the right libwebkit-dev package in your repository, you may take a look on [https://launchpad.net/~webkit-team/+archive/ppa this]. They will tell you how to install it on your machine in just a few steps:
 
   * Write in a terminal...
 {{{
@@ -31,7 +31,7 @@ https://launchpad.net/+help/soyuz/images/software-sources-3rdparty-tab.png
 {{{
 deb http://ppa.launchpad.net/webkit-team/ppa/ubuntu YOUR_UBUNTU_VERSION main
 }}}
-where {{{ YOUR_UBUNTU_VERSION }}} is {{{ karmic }}} for Karmic (9.10), {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10), {{{ hardy }}} for Hardy (8.04). Then click _Close_.
+where {{{ YOUR_UBUNTU_VERSION }}} is {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10) or {{{ hardy }}} for Hardy (8.04). Then click _Close_.
   * Open _System > Administration > Synaptic Package Manager_, press the _Reload_ button and install the latest version of the libwebkit-dev package.
 
 === Compilation ===
