--- a/wiki/InstallationGuide.wiki
+++ b/wiki/InstallationGuide.wiki
@@ -7,20 +7,17 @@ First of all, be sure that you have downloaded and installed [http://pidgin.im P
 
 == Installation from package ==
 
-We have a {{{ .deb }}} package for Ubuntu / Debian to ease the installation process. These are the two small steps to get it installed:
-
-  * download from [http://code.google.com/p/pidgin-embeddedvideo/downloads/list here] the proper package for your distribution
-  * run in a terminal...
+Download the {{{ .deb }}} package for Ubuntu and install it with:
 {{{
-sudo dpkg -i pidgin-embeddedvideo_1.1-1_arch.deb
+sudo dpkg -i pidgin-embeddedvideo_1.1-2_arch.deb
 }}}
 where {{{ arch }}} is either {{{ i386 }}} or {{{ amd64 }}}, depending on your distribution.
 
-To uninstall this plugin you can either run in a terminal...
+If you want to uninstall the plugin, run
 {{{
 sudo apt-get remove pidgin-embeddedvideo
 }}}
-or use the Synaptic Package Manager by removing the {{{ pidgin-embeddedvideo }}} package.
+or use Synaptic Package Manager to remove the {{{ pidgin-embeddedvideo }}} package.
 
 == Installation from source code ==
 
@@ -43,7 +40,6 @@ On other Ubuntu versions, if you don't see the right version of the libwebkit-de
   * Write in a terminal...
 {{{
 sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 2D9A3C5B
-sudo apt-get update
 }}}
   * Open _System > Administration > Software Sources_.
   * Click on the _Third-Party Software_ tab.
@@ -54,7 +50,7 @@ https://launchpad.net/+help/soyuz/images/software-sources-3rdparty-tab.png
 deb http://ppa.launchpad.net/webkit-team/ppa/ubuntu YOUR_UBUNTU_VERSION main
 }}}
 where {{{ YOUR_UBUNTU_VERSION }}} is {{{ jaunty }}} for Jaunty (9.04), {{{ intrepid }}} for Intrepid (8.10) or {{{ hardy }}} for Hardy (8.04). Then click _Close_.
-  * Open _System > Administration > Synaptic Package Manager_, press the _Reload_ button to get the latest version of the libwebkit-dev package.
+  * Open _System > Administration > Synaptic Package Manager_, press the _Reload_ button and get the latest version of the libwebkit-dev package.
 
 === Compilation ===
 
