--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -13,7 +13,7 @@ There is nothing totally unusual. We are using [http://live.gnome.org/WebKitGtk 
 
 === Why doesn't your plugin detect a video link I've just received? ===
 
-Did you check if the site is currently supported? If it is, we could have a bug in our regular expressions. Please tell us about it by opening [http://code.google.com/p/pidgin-embeddedvideo/issues/list a new issue].
+Did you check if the site is currently supported? If it is, we could have a bug in our implementation. Please tell us about it by opening [http://code.google.com/p/pidgin-embeddedvideo/issues/list a new issue].
 
 === Why am I seeing a big white space instead of a video? ===
 
